# sobel-demo

./: .dockerignore  .travis.yml  Dockerfile  Dockerfile-Android  README.md  build.sh  docker-compose.yml
android/: .gitignore  local.properties  prepare.sh  settings.gradle.kts
android/app/: CMakeLists.txt  build.gradle.kts
android/app/src/androidTest/java/es/rausamon/sobeldemo/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: native-lib.cpp
android/app/src/main/java/es/rausamon/sobeldemo/: CameraActivity.java  GalleryActivity.java  JNIHelper.java  MainActivity.java
android/app/src/main/res/drawable/: icon_background.xml
android/app/src/main/res/layout/: activity_camera.xml  activity_gallery.xml  activity_main.xml
android/app/src/main/res/values/: strings.xml  styles.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/es/rausamon/sobeldemo/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
common/: sobel.cpp  sobel.h
linux/: CMakeLists.txt  check-leaks.sh  sobelgui.cpp  test_sobelgui.cpp
